--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="/contact" method="post" data-netlify="true">
+              <form action="post" data-netlify="true">
                   <input type="hidden" name="form-name" value="contact">
                   <div class="row">
                       <div class="col-md-6 form-group">
@@ -959,8 +959,9 @@
                   <div class="form-group mt-3">
                       <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                   </div>
-                  <div class="text-center">
-                      <button type="submit">Send Message</button>
+                  <div class="mt-2" data-netlify-repatcha="true"></div>
+                  <div class="text-center mt-3">
+                      <button type="submit" class="btn btn-primary">Send Message</button>
                   </div>
               </form>
           </div>
