Added Netlify forms and redirects

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="post" data-netlify="true">
+              <form action="post" data-netlify="true" class="php-email-form">
                   <input type="hidden" name="form-name" value="contact">
                   <div class="row">
                       <div class="col-md-6 form-group">
@@ -959,7 +959,7 @@
                   <div class="form-group mt-3">
                       <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                   </div>
-                  <div class="mt-2" data-netlify-repatcha="true"></div>
+                  <div class="mt-2" data-netlify-recaptcha="true"></div>
                   <div class="text-center mt-3">
                       <button type="submit" class="btn btn-primary">Send Message</button>
                   </div>
