Added Netlify forms and redirects

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="post" data-netlify="true" class="php-email-form">
+              <form action="post" data-netlify="true">
                   <input type="hidden" name="form-name" value="contact">
                   <div class="row">
                       <div class="col-md-6 form-group">
@@ -963,7 +963,7 @@
                       <button type="submit" class="btn btn-primary">Send Message</button>
                   </div>
               </form>
-          </div>
+            </div>
           </div>
         </div>
       </section>
