--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="post" data-netlify="true">
+              <form name="contact" action="post" data-netlify="true">
                   <input type="hidden" name="form-name" value="contact">
                   <div class="row">
                       <div class="col-md-6 form-group">
