--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="social-links">
           <a href="https://drive.google.com/drive/folders/1ruVdGOBNa8NSF-yMNaYwEVJ4rwQqyjKy?usp=sharing" target="_blank" class="btn-download-cv" role="button">Download CV</a>
           <a href="https://web.facebook.com/kevin.zeftnady" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/mask.nv" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://instagram.com/zeftnady" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://wa.me/62895332251160" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
         </div>
       </div>
@@ -286,14 +286,14 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Figma <i class="val">80%</i></span>
+                <span class="skill">Figma <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="80"
+                    aria-valuenow="75"
                     aria-valuemin="0"
-                    aria-valuemax="80"
+                    aria-valuemax="75"
                   ></div>
                 </div>
               </div>
