Change user ig on footer

--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
         <div class="social-links">
           <a href="https://web.facebook.com/kevin.zeftnady" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a
-            href="https://instagram.com/mask.nv"
+            href="https://instagram.com/zeftnady"
             target="_blank"
             class="instagram"
             ><i class="bx bxl-instagram"></i
