--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         </p>
         <div class="social-links">
           <a href="https://drive.google.com/drive/folders/1ruVdGOBNa8NSF-yMNaYwEVJ4rwQqyjKy?usp=sharing" target="_blank" class="btn-download-cv" role="button">Download CV</a>
-          <a href="https://web.facebook.com/kevin.zeftnady" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://web.facebook.com/kevin.zeftnady" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://instagram.com/zeftnady" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://wa.me/62895332251160" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://wa.me/62895332251160" target="_blank" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
         </div>
       </div>
     </section>
@@ -980,14 +980,14 @@
           optimis melihat peluang dalam setiap kesulitan." - Winston Churchill
         </p>
         <div class="social-links">
-          <a href="https://web.facebook.com/kevin.zeftnady" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://web.facebook.com/kevin.zeftnady" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a
             href="https://instagram.com/zeftnady"
             target="_blank"
             class="instagram"
             ><i class="bx bxl-instagram"></i
           ></a>
-          <a href="https://wa.me/62895332251160" class="google-plus"
+          <a href="https://wa.me/62895332251160" target="_blank" class="google-plus"
             ><i class="bx bxl-whatsapp"></i
           ></a>
         </div>
